fixed for older IE

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="mocha"></div>
+    <!--[if lte IE 8.0]>
+    <script src="es5-shim.min.js"></script>
+    <![endif]-->
     <script src="power-assert.js"></script>
     <script src="mocha.js"></script>
     <script>
